Update in index file ,aboutpage , style file

--- a/index.html
+++ b/index.html
@@ -184,7 +184,13 @@ I joined Meerut Institute of Technology [2023-2027], a private college under the
     YouTube: 
     <a href="https://www.youtube.com/@NittyshryPrabhu" target="_blank">Nittyshry Prabhu</a> • 
     LinkedIn: 
-    <a href="https://www.linkedin.com/in/nittyshry-prabhu-74a479288" target="_blank">Nittyshry Prabhu</a>
+    <a href="https://www.linkedin.com/in/nittyshry-prabhu-74a479288" target="_blank">Nittyshry Prabhu</a> •
+    Behance
+    <a href="https://www.behance.net/nittyshryprabhu" target="_blank">Nittyshry Prabhu</a> • 
+    Medium: 
+    <a href="https://medium.com/@nittyshryprabhu" target="_blank">@nittyshryprabhu</a> • 
+    Blogspot: 
+    <a href="https://nittyshryprabhu.blogspot.com" target="_blank">Nittyshry Prabhu</a>
   </p>
 </div>
 
