Update in index file ,aboutpage , style file, education.html

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -147,7 +147,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="#story">My Story</a>
-        <a href="#journey">Journey</a>
+        <a href="#vision">Vision</a>
       </nav>
     </header>
 
@@ -196,104 +196,127 @@
       </p>
     </section>
 
-    <section id="journey">
-      <h2>Journey Highlights</h2>
+    <section id="vision">
+      <h2>Vision Highlights</h2>
       <div class="timeline">
         <div class="timeline-item">
-          <h3>2008-2011 — Early Childhood Education - Anganwadi</h3>
-          <b> <span>Education has always held the highest place in my family’s values. My parents have always believed
-              that knowledge is the true foundation of life — and they’ve never hesitated to prioritize our learning
-              above everything else. <br>
+          <h3>About My Hobbies</h3>
+          <b> <span><b>Creative Expression</b><br>
+    I love writing, storytelling, and creating content that reflects my thoughts and feelings.<br>
 
-              When I was around three years old, they sent me to the nearby Anganwadi — just about fifty meters from our
-              home. I still remember those early mornings when my mother and father would walk me there hand in hand.
-              <br>
+<b>Self-Reflection</b><br>
+    I spend time thinking about life, my choices, and the direction I want to take.
+<br>
+<b>Inspiration from Details</b><br>
+    Small moments, my surroundings, and emotions often spark my creativity.
+<br>
+<b>Life Design</b><br>
+    I enjoy planning, managing, and shaping my life while staying ready for the unpredictable.<br>
 
-              The Anganwadi was beside the small Kali Mandir, barely thirty meters away from our house. It’s one of my
-              earliest memories — though I don’t quite remember who else studied with me there, I clearly remember the
-              warmth, care, and the quiet beginning of what would become my lifelong journey of learning.</span></b>
+<b>Art & Aesthetics</b><br>
+    I’m drawn to colors, visuals, and anything that lets me express creativity.
+<br>
+<b>Learning & Growth</b><br>
+    I always strive to improve myself and expand my skills as a creator and a person.<br>
+
+<b>Coding Passion Projects</b><br> 
+    I enjoy building web apps and tools that combine my love for coding and creativity.</span></b>
         </div>
         <div class="timeline-item">
-          <h3>2011-2019 — Primary School Education</h3>
-          <b><span>As I grew a little older, my learning world expanded — and so did my routine.
-              I began attending two schools at the same time. Once a week, usually on Monday or Tuesday, I would go to a
-              nearby Government Prathmik Vidyalay. The rest of the week, I studied at a private school — SSP School.<br>
-              From Class 1 to 8, these two places became two sides of my early learning journey — one simple and
-              traditional, the other more structured and academic. <br>
+          <h3>About My Aim</h3>
+          <b><span><b>Follow My Creative Calling</b><br>
+    To build a life around content creation, storytelling, and self-expression.
+<br>
+<b>Live Life on My Own Terms</b><br>
+    To design and manage my life with freedom, discipline, and self-awareness.
+<br>
+<b>Grow Continuously</b><br>
+    To keep learning new skills, improving myself, and becoming a better creator and human being.<br>
 
-              <b>During this phase, I met some truly special people who left a mark on my life. </b> <br>
-              <i style="color: rgb(157, 157, 13);">In Class 5, I met my good friend Nitish, someone who made school days
-                brighter and filled them with laughter and curiosity.</i> <br>
-              <i style="color: purple;">And in Class 6, I met Riya — a person I’ll always be grateful for. She taught me
-                how to see the world with beauty and simplicity, not just through books but through perspective. Her
-                kindness and grace still inspire me today.</i> <br>
+<b>Find True Happiness</b><br>
+    To choose the path that gives me peace, joy, and meaning — not just success on paper.<br>
 
-              Those years made learning feel interesting and alive.
-              My parents constantly reminded me of the importance of education, and their words shaped how I looked at
-              school — not as an obligation, but as an opportunity to grow every single day.</span></b>
+<b>Turn Challenges Into Strength</b><br>
+    To face unpredictable situations with courage and turn them into opportunities for growth.<br>
+
+<b>Inspire Others</b><br>
+    To share my journey in a way that motivates people to believe in themselves and follow their own path.</span></b>
         </div>
         <div class="timeline-item">
-          <h3>2019-2021 — High School / Secondary Education</h3>
-          <b><span>After completing my primary education, I continued my studies in my own village — a place that always
-              kept me close to my roots.<br>
-              I joined Jairampur High School, a government school under the Bihar School Examination Board (BSEB).
-              <br>
-              Those two years — Class 9 and 10 — were full of growth, discovery, and confidence.
-              High school brought new experiences, new friends, and a deeper connection with learning.<br>
-              Among all subjects, Mathematics became my favorite. I enjoyed solving problems, exploring patterns, and
-              finding beauty in numbers — it made me feel focused, challenged, and excited at the same time.
-              <br>
-              My high school days were not just about academics; they also taught me discipline, patience, and the value
-              of consistent effort.
-              Living in my village during this time gave me balance — simplicity at home and curiosity in school.
-              <br>
-              I scored 86.8% in my 12th Examination.</span></b>
+          <h3>About My Life Partner</h3>
+          <b><span><b>Simple yet graceful</b><br>
+    not showy, but naturally beautiful in the way she lives.
+<br>
+<b>Smart but humble </b><br>
+    intelligent, but never arrogant.<br>
+
+<b>Kind and respectful</b> <br>
+    treats others with the same respect she wants for herself.
+<br>
+<b>Emotionally understanding </b><br>
+    someone who can feel my emotions, even when I don’t speak.<br>
+
+<b>Honest and genuine </b><br>
+    real, not fake; her truth is her greatest strength.<br>
+
+<b>Romantic yet grounded </b><br>
+    knows how to create love in small moments, but also stays strong in tough times.<br>
+
+<b>Supportive of dreams </b><br>
+    inspires me to believe in myself and never give up.
+<br>
+<b>A teacher and a companion </b>  <br>
+    someone who helps me grow, but also walks beside me in every step.</span></b>
         </div>
         <div class="timeline-item">
-          <h3>2021-2023 — Higher Secondary / Intermediate Education</h3>
-          <b><span>I continued my studies in my village itself — completing Class 11 and 12 from Jairampur High School,
-              under the Bihar School Examination Board (BSEB). <br>
+          <h3>About My Experiences</h3>
+          <b><span>When I look back at my journey, I see not just years, but a chain of surprises that shaped me into who I am today. Every stage of life has carried its own lessons, its own struggles, and its own hidden beauty.<br>
 
-              These two years quietly changed the way I looked at the world — and at myself.
-              I began to notice things more deeply: the people around me, their struggles, their ways of thinking.
-              Somewhere within, a shift started happening.<br>
-              <i style="color: green;">I began to question, to explore, and to understand what truly mattered to me.
-              </i><br>
+<b>Birth:</b> <br>
+    My life began with rain falling hard outside, when I was born at home instead of a hospital. Even from the start, I was different from my siblings. God kept me safe, and that first surprise gave me my first reason for gratitude.
+<br>
+<b>Childhood: </b><br>
+    As the first son, I carried both love and responsibility. My parents gave me the chance to study in a private hostel, something no one in my family had before me. With my badi didi by my side, my childhood was filled with laughter and shared memories.<br>
 
-              I’ve always been a sensitive and curious person, eager to see every detail, to know the “why” behind
-              things.
-              During this time, that curiosity turned inward — I started searching for myself.
-              While most people around me followed the same line, I somehow felt drawn to a different path, one that was
-              uniquely mine. <br>
-
-              <i style="color: purple;">After about two years, I met Riya again. She seemed a bit changed — and perhaps,
-                so was I.
-                That meeting made me realize that life keeps moving, people evolve, and it’s up to us to keep growing —
-                for ourselves and for those we care about.</i> <br><br>
-
-              <i style="color: rgb(138, 138, 9);">My friend Nitish was still with me, though our ways of seeing the
-                world had started to differ a little.</i> <br> <br>
-
-              When I entered Class 12, I grew frustrated with the local teaching methods — they no longer inspired me.
-              So, I stopped relying on classroom lessons and began self-studying, observing life, society, and the world
-              more closely instead. <br>
-
-              That phase taught me independence and self-discipline.
-              When the results came, I scored 76.4% in my 12th exams — a mark that meant more than numbers; it reflected
-              my journey of understanding, effort, and quiet growth.</span></b>
+<b>Teenage:</b> <br>
+    I grew up with simplicity — sometimes with only two sets of clothes to wear, carrying shyness and low confidence. Yet, teenage also gave me people who changed my life: Riya, who taught me love, respect, and understanding, and Nitish, my closest friend, who still remains by my side.
+<br>
+<b>College: </b><br>
+    I stepped into engineering, even though I once believed education was a scam. Life surprised me again by placing me in CSE (AIML). Hostel life, however, was not what I dreamed of. Friendships were hard, roommates often troubled me, and struggles became a daily part of my routine. Yet, my ambition — to become great and successful — keeps my hope alive.
+<br>
+<b>Life Lessons: </b><br>
+    Every step has taught me something: behind every light, there is a hidden story. Behind every struggle, there is a lesson. Behind every relationship, there is a truth we may or may not see. These lessons keep me moving forward, even when life feels uncertain.
+<br>
+Through all these experiences, one truth has never left me: life will always surprise us. Sometimes with joy, sometimes with struggle, sometimes with love, and sometimes with pain. But every surprise is a teacher, every experience is a gift.
+<br>
+And so, when I think about my journey, I smile and say once more: <br>
+    I am surprised again.</span></b>
         </div>
 
         <div class="timeline-item">
-          <h3>2023-2027 — Higher Eduaction / College</h3>
-          <b><span>After completing my higher secondary education [2021-2023], I continued my studies and came to Delhi
-              NCR . I joined Meerut Institute of Technology [2023-2027], a private college under the Dr. A. P. J. Abdul
-              Kalam Technical University, Lucknow [ AKTU ].</span></b>
+          <h3>About My Future Focus</h3>
+          <b><span><b>Creative Career</b><br>
+    Building a strong path in content creation, storytelling, and digital expression.
+<br>
+<b>Self-Growth</b><br>
+    Continuously improving my skills, knowledge, and mindset to become my best version.
+<br>
+<b>Financial Freedom</b><br>
+    Creating multiple income sources so I can live life independently and on my own terms.
+<br>
+<b>Peace & Happiness</b><br>
+    Choosing paths that bring me inner satisfaction and not just outer success.
+<br>
+<b>Strong Relationships</b><br>
+    Surrounding myself with people who respect, support, and inspire me.
+<br>
+<b>Contribution</b><br>
+    Using my journey to inspire and help others find their own path in life.</span></b>
         </div>
       </div>
     </section>
 
-    <div class="quote">“Education is a process of changing ourselves, and everything related to us.
-      — Nittyshry Prabhu”</div>
+    
 
 
     <section id="contact">
