--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <h4>Board - BSEB</h4>
                 <p class="sub">After completing my primary education, I continued my studies in my own village — a place that always kept me close to my roots.
 I joined Jairampur High School [2019-2023], a government school under the Bihar School Examination Board (BSEB).</p>
+<a href="education.html"><button>Know more</button></a>
               </div>
             </div>
           </div>
@@ -133,6 +134,7 @@ I joined Jairampur High School [2019-2023], a government school under the Bihar 
                 <h4>University - AKTU</h4>
                 <p class="sub">After completing my higher secondary education [2021-2023], I continued my studies and came to Delhi NCR .
 I joined Meerut Institute of Technology [2023-2027], a private college under the Dr. A. P. J. Abdul Kalam Technical University, Lucknow [ AKTU ].</p>
+<a href="education.html"><button>Know more</button></a>
               </div>
             </div>
           </div>
