Update in index file ,aboutpage , style file, education.html

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -154,7 +154,7 @@
     <section class="hero">
       <img src="Image/logo.jpg" alt="Arjun Verma">
       <h1>Nittyshry Prabhu</h1>
-      <p class="sub">[ A Imagineer ] = [ Imagination ] + [ Engineer ]</p>
+      <p class="sub">[A Imagineer] = [Imagination] + [Engineer]</p>
     </section>
 
     <section id="story" class="story">
@@ -201,7 +201,7 @@
       <div class="timeline">
         <div class="timeline-item">
           <h3>About My Hobbies</h3>
-          <b> <span><b>Creative Expression</b><br>
+           <span><b>Creative Expression</b><br>
     I love writing, storytelling, and creating content that reflects my thoughts and feelings.<br>
 
 <b>Self-Reflection</b><br>
@@ -220,11 +220,11 @@
     I always strive to improve myself and expand my skills as a creator and a person.<br>
 
 <b>Coding Passion Projects</b><br> 
-    I enjoy building web apps and tools that combine my love for coding and creativity.</span></b>
+    I enjoy building web apps and tools that combine my love for coding and creativity.</span>
         </div>
         <div class="timeline-item">
           <h3>About My Aim</h3>
-          <b><span><b>Follow My Creative Calling</b><br>
+          <span><b>Follow My Creative Calling</b><br>
     To build a life around content creation, storytelling, and self-expression.
 <br>
 <b>Live Life on My Own Terms</b><br>
@@ -240,11 +240,11 @@
     To face unpredictable situations with courage and turn them into opportunities for growth.<br>
 
 <b>Inspire Others</b><br>
-    To share my journey in a way that motivates people to believe in themselves and follow their own path.</span></b>
+    To share my journey in a way that motivates people to believe in themselves and follow their own path.</span>
         </div>
         <div class="timeline-item">
           <h3>About My Life Partner</h3>
-          <b><span><b>Simple yet graceful</b><br>
+          <span><b>Simple yet graceful</b><br>
     not showy, but naturally beautiful in the way she lives.
 <br>
 <b>Smart but humble </b><br>
@@ -266,11 +266,11 @@
     inspires me to believe in myself and never give up.
 <br>
 <b>A teacher and a companion </b>  <br>
-    someone who helps me grow, but also walks beside me in every step.</span></b>
+    someone who helps me grow, but also walks beside me in every step.</span>
         </div>
         <div class="timeline-item">
           <h3>About My Experiences</h3>
-          <b><span>When I look back at my journey, I see not just years, but a chain of surprises that shaped me into who I am today. Every stage of life has carried its own lessons, its own struggles, and its own hidden beauty.<br>
+          <span>When I look back at my journey, I see not just years, but a chain of surprises that shaped me into who I am today. Every stage of life has carried its own lessons, its own struggles, and its own hidden beauty.<br>
 
 <b>Birth:</b> <br>
     My life began with rain falling hard outside, when I was born at home instead of a hospital. Even from the start, I was different from my siblings. God kept me safe, and that first surprise gave me my first reason for gratitude.
@@ -290,12 +290,12 @@
 Through all these experiences, one truth has never left me: life will always surprise us. Sometimes with joy, sometimes with struggle, sometimes with love, and sometimes with pain. But every surprise is a teacher, every experience is a gift.
 <br>
 And so, when I think about my journey, I smile and say once more: <br>
-    I am surprised again.</span></b>
+    I am surprised again.</span>
         </div>
 
         <div class="timeline-item">
           <h3>About My Future Focus</h3>
-          <b><span><b>Creative Career</b><br>
+          <span><b>Creative Career</b><br>
     Building a strong path in content creation, storytelling, and digital expression.
 <br>
 <b>Self-Growth</b><br>
@@ -311,7 +311,7 @@ And so, when I think about my journey, I smile and say once more: <br>
     Surrounding myself with people who respect, support, and inspire me.
 <br>
 <b>Contribution</b><br>
-    Using my journey to inspire and help others find their own path in life.</span></b>
+    Using my journey to inspire and help others find their own path in life.</span>
         </div>
       </div>
     </section>
