Update in index file ,aboutpage , style file, education.html

--- a/education.html
+++ b/education.html
@@ -80,30 +80,30 @@
           <h3>2008-2011 — Early Childhood Education - Anganwadi</h3>
            <span>Education has always held the highest place in my family’s values. My parents have always believed
               that knowledge is the true foundation of life — and they’ve never hesitated to prioritize our learning
-              above everything else. <br>
+              above everything else. <br><br>
 
               When I was around three years old, they sent me to the nearby Anganwadi — just about fifty meters from our
               home. I still remember those early mornings when my mother and father would walk me there hand in hand.
-              <br>
+              <br><br>
 
               The Anganwadi was beside the small Kali Mandir, barely thirty meters away from our house. It’s one of my
               earliest memories — though I don’t quite remember who else studied with me there, I clearly remember the
-              warmth, care, and the quiet beginning of what would become my lifelong journey of learning.</span>
+              warmth, care, and the quiet beginning of what would become my lifelong journey of learning.</span><br>
         </div>
         <div class="timeline-item">
           <h3>2011-2019 — Primary School Education</h3>
           <span>As I grew a little older, my learning world expanded — and so did my routine.
               I began attending two schools at the same time. Once a week, usually on Monday or Tuesday, I would go to a
-              nearby Government Prathmik Vidyalay. The rest of the week, I studied at a private school — SSP School.<br>
+              nearby Government Prathmik Vidyalay. The rest of the week, I studied at a private school — SSP School.<br><br>
               From Class 1 to 8, these two places became two sides of my early learning journey — one simple and
-              traditional, the other more structured and academic. <br>
+              traditional, the other more structured and academic. <br><br>
 
-              <b>During this phase, I met some truly special people who left a mark on my life. </b> <br>
+              <b>During this phase, I met some truly special people who left a mark on my life. </b> <br><br>
               <i style="color: rgb(157, 157, 13);">In Class 5, I met my good friend Nitish, someone who made school days
                 brighter and filled them with laughter and curiosity.</i> <br>
               <i style="color: purple;">And in Class 6, I met Riya — a person I’ll always be grateful for. She taught me
                 how to see the world with beauty and simplicity, not just through books but through perspective. Her
-                kindness and grace still inspire me today.</i> <br>
+                kindness and grace still inspire me today.</i> <br><br>
 
               Those years made learning feel interesting and alive.
               My parents constantly reminded me of the importance of education, and their words shaped how I looked at
@@ -112,36 +112,36 @@
         <div class="timeline-item">
           <h3>2019-2021 — High School / Secondary Education</h3>
           <span>After completing my primary education, I continued my studies in my own village — a place that always
-              kept me close to my roots.<br>
+              kept me close to my roots.<br><br>
               I joined Jairampur High School, a government school under the Bihar School Examination Board (BSEB).
-              <br>
+              <br><br>
               Those two years — Class 9 and 10 — were full of growth, discovery, and confidence.
-              High school brought new experiences, new friends, and a deeper connection with learning.<br>
+              High school brought new experiences, new friends, and a deeper connection with learning.<br><br>
               Among all subjects, Mathematics became my favorite. I enjoyed solving problems, exploring patterns, and
               finding beauty in numbers — it made me feel focused, challenged, and excited at the same time.
-              <br>
+              <br><br>
               My high school days were not just about academics; they also taught me discipline, patience, and the value
               of consistent effort.
               Living in my village during this time gave me balance — simplicity at home and curiosity in school.
-              <br>
+              <br><br>
               I scored 86.8% in my 12th Examination.</span>
         </div>
         <div class="timeline-item">
           <h3>2021-2023 — Higher Secondary / Intermediate Education</h3>
           <span>I continued my studies in my village itself — completing Class 11 and 12 from Jairampur High School,
-              under the Bihar School Examination Board (BSEB). <br>
+              under the Bihar School Examination Board (BSEB). <br><br>
 
               These two years quietly changed the way I looked at the world — and at myself.
               I began to notice things more deeply: the people around me, their struggles, their ways of thinking.
-              Somewhere within, a shift started happening.<br>
+              Somewhere within, a shift started happening.<br><br>
               <i style="color: green;">I began to question, to explore, and to understand what truly mattered to me.
-              </i><br>
+              </i><br><br>
 
               I’ve always been a sensitive and curious person, eager to see every detail, to know the “why” behind
               things.
               During this time, that curiosity turned inward — I started searching for myself.
               While most people around me followed the same line, I somehow felt drawn to a different path, one that was
-              uniquely mine. <br>
+              uniquely mine. <br><br>
 
               <i style="color: purple;">After about two years, I met Riya again. She seemed a bit changed — and perhaps,
                 so was I.
@@ -153,7 +153,7 @@
 
               When I entered Class 12, I grew frustrated with the local teaching methods — they no longer inspired me.
               So, I stopped relying on classroom lessons and began self-studying, observing life, society, and the world
-              more closely instead. <br>
+              more closely instead. <br><br>
 
               That phase taught me independence and self-discipline.
               When the results came, I scored 76.4% in my 12th exams — a mark that meant more than numbers; it reflected
