--- a/education.html
+++ b/education.html
@@ -124,7 +124,9 @@
               of consistent effort.
               Living in my village during this time gave me balance — simplicity at home and curiosity in school.
               <br><br>
-              I scored 86.8% in my 12th Examination.</span>
+              I scored 86.8% in my 12th Examination.</span> <br>
+             <a href="10thmarksheet.html"> <button style="border: rgb(11, 18, 11); background-color: greenyellow; color: rgb(212, 4, 4);">See marksheet</button></a>
+              
         </div>
         <div class="timeline-item">
           <h3>2021-2023 — Higher Secondary / Intermediate Education</h3>
@@ -157,14 +159,16 @@
 
               That phase taught me independence and self-discipline.
               When the results came, I scored 76.4% in my 12th exams — a mark that meant more than numbers; it reflected
-              my journey of understanding, effort, and quiet growth.</span>
+              my journey of understanding, effort, and quiet growth.</span><br>
+             <a href="12thmarksheet.html"> <button style="border: rgb(11, 18, 11); background-color: greenyellow; color: rgb(212, 4, 4);">See marksheet</button></a>
         </div>
 
         <div class="timeline-item">
           <h3>2023-2027 — Higher Eduaction / College</h3>
           <span>After completing my higher secondary education [2021-2023], I continued my studies and came to Delhi
               NCR . I joined Meerut Institute of Technology [2023-2027], a private college under the Dr. A. P. J. Abdul
-              Kalam Technical University, Lucknow [ AKTU ].</span>
+              Kalam Technical University, Lucknow [ AKTU ].</span><br>
+             <a href="graduation.html"> <button style="border: rgb(11, 18, 11); background-color: greenyellow; color: rgb(212, 4, 4);">See marksheet</button></a>
         </div>
       </div>
     </section>
