Update in index file ,aboutpage , style file, education.html

--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Education — Arjun Verma</title>
+  <title>Education — Nittyshry Prabhu</title>
   <meta name="description" content="Education journey of Arjun Verma — from childhood learning to lifelong exploration." />
   <style>
     :root{
