Update in index file ,aboutpage , style file, education.html

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -316,7 +316,7 @@ And so, when I think about my journey, I smile and say once more: <br>
       </div>
     </section>
 
-    
+     <a href="index.html" style="font-weight:700;color:var(--dark)">← Back to Home</a>
 
 
     <section id="contact">
