--- a/education.html
+++ b/education.html
@@ -176,6 +176,8 @@
     <div class="quote" style="color: red; font-weight: 900px;">“Education is a process of changing ourselves, and everything related to us.
       — Nittyshry Prabhu”</div>
 
+ <a href="index.html" style=" text-decoration: none; font-weight:700;color:var(--dark) ">← Back to Home</a>
+
 
     <section id="contact">
       <h2>Get touch with me</h2>
