Update in index file ,aboutpage , style file, education.html

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -154,7 +154,7 @@
     <section class="hero">
       <img src="Image/logo.jpg" alt="Arjun Verma">
       <h1>Nittyshry Prabhu</h1>
-      <p class="sub">[A Imagineer] = [Imagination] + [Engineer]</p>
+      <p class="sub">[Imagineer] = [Imagination] + [Engineer]</p>
     </section>
 
     <section id="story" class="story">
