--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="avatar"><img src="Image/logo.jpg" alt="Nittyshry" /></div>
       <div>
         <h1>Nittyshry Prabhu</h1>
-        <div class="sub">[ A Imagineer ] = [ Imagination ] + [ Engineer ]  </div>
+        <div class="sub">[ Imagineer ] = [ Imagination ] + [ Engineer ]  </div>
       </div>
       <nav>
         <a href="#about">About</a>
