Update in index file ,aboutpage , style file, education.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               alt="img2" />
             <h4>Child’s Evolution — Mind & Body Development Programme</h4>
             <p class="sub">A practical community programme to strengthen cognitive skills, creativity, life-skills and physical fitness of village children.</p>
-            <a href="CEvolution.html"><button>Know more</button></a>
+            <a href="projects.html"><button>Know more</button></a>
           </div>
           <div class="card">
             <img
@@ -99,7 +99,7 @@
               alt="img3" />
             <h4>ShrySpace — The Human Retreat</h4>
             <p class="sub">“ShrySpace” will be a natural and creative retreat — not a luxury resort, but a soulful environment where visitors can rest their minds, awaken imagination, and rediscover meaning.</p>
-<a href="ShSpace.html"><button>Know more</button></a>
+<a href="projects.html"><button>Know more</button></a>
           </div>
           <div class="card">
             <img
@@ -107,7 +107,7 @@
               alt="img4" />
             <h4>The World Journey</h4>
             <p class="sub">To travel across the world — exploring cultures, people, and emotions — and document the unseen side of humanity: kindness, creativity, and life’s raw beauty.</p>
-            <a href="WJourney.html"><button>Know more</button></a>
+            <a href="projects.html"><button>Know more</button></a>
           </div>
         </div>
       </section>
