--- a/graduation.html
+++ b/graduation.html
@@ -1,59 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Marksheet</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Projects</title>
+  <meta name="description" content="Processing page with modern responsive loading animation." />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
-      text-align: center;
-      padding: 40px;
+    :root {
+      --accent: #0ea5a4;
+      --dark: #0b1220;
+      --muted: #6b7280;
     }
-    h2 {
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: linear-gradient(180deg, #f0fdfa 0%, #ffffff 100%);
+      font-family: Inter, system-ui, sans-serif;
+      color: var(--dark);
+    }
+    .loader {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .spinner {
+      width: 70px;
+      height: 70px;
+      border: 6px solid rgba(14,165,164,0.3);
+      border-top-color: var(--accent);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
       margin-bottom: 20px;
     }
-    .pdf-container {
-      width: 90%;
-      max-width: 800px;
-      height: 90vh;
-      margin: 0 auto;
-      border: 2px solid #ccc;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      overflow: hidden;
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
+
+    h1 {
+      font-size: 22px;
+      margin: 0 0 10px;
     }
-    a.back {
-      display: inline-block;
-      margin-top: 20px;
-      text-decoration: none;
-      color: white;
-      background: #007bff;
-      padding: 10px 20px;
-      border-radius: 6px;
-      transition: background 0.3s;
+
+    p {
+      color: var(--muted);
+      font-size: 15px;
+      margin: 0;
     }
-    a.back:hover {
-      background: #0056b3;
+
+    @media (max-width: 600px) {
+      .spinner { width: 55px; height: 55px; border-width: 5px; }
+      h1 { font-size: 20px; }
+      p { font-size: 14px; }
     }
   </style>
 </head>
 <body>
-
-  <h2>My Marksheet</h2>
-
-  <!-- 👇 Change "marksheet.pdf" to your actual PDF file name -->
-  <div class="pdf-container">
-    <iframe src="Image/AKTU.pdf" title="My Marksheet"></iframe>
+  <div class="loader">
+    <div class="spinner"></div>
+    <h1>Processing...</h1>
+    <p>Please wait a moment while we complete your request.</p>
   </div>
-
-  <a href="index.html" class="back">⬅ Back to Home</a>
-
 </body>
 </html>
