Update in index file

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <img
               src="Image/image2.jpg"
               alt="img2" />
-            <h4>Child’s Evolution — Mind & Body Development Programme</h4>
+            <h4>Child’s Knowledge Evolution — Mind & Body Development Programme</h4>
             <p class="sub">A practical community programme to strengthen cognitive skills, creativity, life-skills and physical fitness of village children.</p>
             <a href="projects.html"><button>Know more</button></a>
           </div>
