--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               alt="img2" />
             <h4>Child’s Knowledge Evolution — Mind & Body Development Programme</h4>
             <p class="sub">A practical community programme to strengthen cognitive skills, creativity, life-skills and physical fitness of village children.</p>
-            <a href="projects.html"><button>Know more</button></a>
+            <a href="child'sEvolution.html"><button>Know more</button></a>
           </div>
           <div class="card">
             <img
